# comfy-ovum

./: .gitignore  CHANGELOG.md  README.md  STYLEGUIDE.md  __build__.py  __export_frontend_types.py  __init__.py  _cudnn_result_wrapper_api.py  _cudnn_toggle_api.py  _cudnn_wrapper_api.py  _mini_webserver.py  _result_wrapper_api.py  amd-nvidia.py  assert_ovum.py  autonode.py  batch_handlers.py  burn_notice.py  casting.py  checknode.py  classes_to_cudnn_wrap.txt  classes_to_result_wrap.txt  combo_mirror.py  common_types.py  convert_to_listish.py  cudnn_result_wrapper.py  cudnn_toggle.py  cudnn_wrapper.py  extensible_prompt_processor.py  file_drop_fs_access_test.html  folder_paths_node.py  formatter.py  gauge-sample.psd  get_setting.py  getsetenv.py  ground.py  halt_toggle.py  image_list_loader.py  knob_node.py  list_handlers.py  live_crop.py  (+29 more)
.githooks/: README.txt  post-commit.cmd
data/: llm-prompts.json  lmstudio_models.json
docs/: how-gpt5-built-twinnodes.md
js/: best-config-tracker.js  graphHelpers.js  halt_toggle.js  ovum-timer.js  print_r.js  timer-class.js  timer-styles.js  timer-ts.ts.txt  timer.css  timer.js  timer.ts  tooltipHelpers.js  typedefs.js  utility.js
metadata/: __init__.py  metadata_file_extractor.py  metadata_processor.py
research/: easyuse-loop-nodes.md  media_metadata_extractor.py  my_graph_builder.py
resources/: nifty_scripts.md  os_path_functions.json  twinnodes.md
scripts/: scrape_sphinx_functions.py  sync_pyproject_from_requirements.py
styles/: daisyui-primevue.css  spotlight.css  tailwind.css
tools/: FileWatcher.ahk  auto_bump_version.py  auto_bump_version_ovum.py  video_processing_utils.py
typings/: ComfyNode.d.ts  app-import-types.d.ts  ui.js
underscore/: underscore3.py  underscore_helpers.py
underscore3/: __init__.py  underscore3.py
(+164 files in other folders)
