[project]
name = "ovum"
description = "An assorted reliquary of nodes: mismatched, stubborn, and deliberately indistinct; they do what is required; do not ask for particulars."
version = "1.0.142"
dependencies = [
    "aiohttp",
    "braceexpand",
    "markdown-it-py",
    "numpy",
    "pillow",
    "pymediainfo",
    "requests",
]

[project.license]
file = "LICENSE"

[project.urls]
Repository = "https://github.com/sfinktah/comfy-ovum"

[tool.comfy]
PublisherId = "sfinktah"
DisplayName = "comfy-ovum"
Icon = "https://avatars.githubusercontent.com/u/4650770"
includes = []
